-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
Qt Creator 4.0.0-beta1
-
Ubuntu 15.10 64 bit
- Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
- Select a Kit.
- Select a different Qt version for this Kit.
A warning icon will appear near the Kit's name. - Hover the Kit's name to show a tooltip.
In the tooltip you can read that the CMake Configuration is pointing to a different Qt version. At the moment, the only way to fix the Kit is to edit the CMake Configuration manually.
There should be an easier way to change the Qt version in a Kit. Creator should update the CMake Configuration when this makes sense or offer a semi-automatic way to fix this setting.
| For Gerrit Dashboard: QTCREATORBUG-15830 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 152473,2 | CMake: Improve handling of cmake configuration in kits | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |